--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-<!DOCTYPE html><html lang ="en"><head><meta charset="utf-8"><meta name="author" content="Iftekhar A Chowdhury"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet"><title>Iftekhar A Chowdhury || Front End Web Developer || Full Stack Web Developer || Software Engineer || New York</title><meta name="description" content="Software Engineer, Full Stack Web Developer in New York area"><link rel="shortcut icon" href="iac.png" type="image/x-icon" media="all"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script> <script src="treehouse.js"></script> <link rel="stylesheet" href="treehouse.css"><link href="www.ilovechittagong.com/iac/iftekhar.html" rel="canonical"></head><body><div class="container"> <header class="jumbotron"><p id="me"> <img src="iac.png" alt="Iftekhar's profile picture" class="icon"> Iftekhar <br><br> <br></p></header><div class="center"><p id="awesome"><a href="https://github.com/iac-nyc" target="_blank" title="My GitHub Profile"><i class="fa fa-github-square" style="font-size:32px; color:#FF4500"></i></a>&nbsp;<a href="https://iac-nyc.github.io/courseView/" target="_blank" title="Course View"><i class="fa  fa-globe" style="font-size:32px; color:#FF4500"></i></a>&nbsp;<a href="https://www.ilovechittagong.com" target="_blank" title="i love chittagong"><i class="fa fa-heart-o" style="font-size:30px; color:#FF4500"></i></a>&nbsp;<a href="https://iac-nyc.github.io/certificatesView/" target="_blank" title="Certificates View"><i class="fa fa-certificate" style="font-size:32px; color:#FF4500"></i></a></p><div id="typed-strings"><p>Hello, I am Iftekhar Ahmad Chowdhury!</p><p class="text-muted"> I am a lifelong learner because I believe in continuous improvement. Here are some of my achievements and learning progress @treehouse. <br> To view my Treehouse profile click here: <a href="https://teamtreehouse.com/iftekharchowdhury" target="_blank"> https://teamtreehouse.com/iftekharchowdhury</a></p></div> <span id="typed"></span></div><div class="badge-container"> <b><p id="treehouse-count"></p></b> <br> <br><ul id="badges"></ul></div> <footer><p class="date_output"></p> <script>var x=document.getElementsByClassName("date_output");x[0].innerHTML=new Date().getFullYear()+" &copy; Iftekhar Ahmad Chowdhury";</script> </footer></div> <script>var typed=new Typed('#typed',{stringsElement:'#typed-strings',typeSpeed:40,showCursor:false,});</script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="author" content="Iftekhar A Chowdhury">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+    <title>Iftekhar A Chowdhury || Front End Web Developer || Full Stack Web Developer || Software Engineer || New York</title>
+    <meta name="description" content="Software Engineer, Full Stack Web Developer in New York area">
+    <link rel="shortcut icon" href="iac.png" type="image/x-icon" media="all">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
+    <script src="treehouse.js"></script>
+    <link rel="stylesheet" href="treehouse.css">
+    <link href="www.ilovechittagong.com/iac/iftekhar.html" rel="canonical">
+    <style>
+        .ba {
+            background-color: black;
+            color: white;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <header class="jumbotron">
+            <div id="me" class="ctr"> <img src="iac.png" alt="Iftekhar's profile picture" class="icon special"> Iftekhar<br><br> <br></div>
+        </header>
+        <div class="center">
+            <nav id="awesome" class="ctr">
+              <ul>
+              	<li>
+                  <a href="https://github.com/iac-nyc" target="_blank" title="My GitHub Profile">
+                      <i class="fa fa-github-square" style="font-size:32px; color:#FF4500"></i>
+                  </a>
+                </li>
+                <li>      
+              	 <a href="https://iac-nyc.github.io/courseView/" target="_blank" title="Course View">
+                	 <i class="fa  fa-globe" style="font-size:32px; color:#FF4500"></i>
+              	 </a>
+               </li>
+               <li>      
+                 <a href="https://www.ilovechittagong.com" target="_blank" title="i love chittagong">
+                   <i class="fa fa-heart-o" style="font-size:30px; color:#FF4500"></i>
+                  </a>
+                </li>  
+                <li>  
+                   <a href="https://iac-nyc.github.io/certificatesView/" target="_blank" title="Certificates View">
+                 	 <i class="fa fa-certificate" style="font-size:32px; color:#FF4500"></i>
+                   </a>
+                 </li>    
+               </ul>  
+             </nav>
+            <div id="typed-strings" >
+                <p class="ba">Hello, I am Iftekhar Ahmad Chowdhury!</p>
+                <p class="class="ba""> I am a lifelong learner because I believe in continuous improvement. Here are some of my achievements and learning progress @treehouse. <br> To view my Treehouse profile click here: <a href="https://teamtreehouse.com/iftekharchowdhury" target="_blank"> https://teamtreehouse.com/iftekharchowdhury</a></p>
+            </div> <span id="typed"></span>
+        </div>
+        <div class="badge-container">
+                <strong><p id="treehouse-count"></p></strong>
+             <br> <br>
+            <ul id="badges"></ul>
+        </div>
+        <footer>
+            <p class="date_output"></p>
+            <script>
+                var x = document.getElementsByClassName("date_output");
+                x[0].innerHTML = new Date().getFullYear() + " &copy; Iftekhar Ahmad Chowdhury";
+            </script>
+        </footer>
+    </div>
+    <script>
+        var typed = new Typed('#typed', {
+            stringsElement: '#typed-strings',
+            typeSpeed: 70,
+            showCursor: true,
+        });
+    </script>
+</body>
+
+</html>
