--- a/index.html
+++ b/index.html
@@ -49,11 +49,16 @@
                 	 <i class="fa  fa-globe" style="font-size:32px; color:#FF4500"></i>
               	 </a>
                </li>
-               <li>      
+             <!--  <li>      
                  <a href="https://www.ilovechittagong.com" target="_blank" title="i love chittagong">
                    <i class="fa fa-heart-o" style="font-size:30px; color:#FF4500"></i>
                   </a>
-                </li>  
+                </li>  -->
+                   <li>
+                          <a href="https://www.linkedin.com/in/iac-nyc/" target="_blank" title="LinkedIn Profile">
+                          <i class="fa fa-linkedin" style="font-size:32px; color:#FF4500"></i>
+                          </a>
+                      </li>
                 <li>  
                    <a href="https://iac-nyc.github.io/certificatesView/" target="_blank" title="Certificates View">
                  	 <i class="fa fa-certificate" style="font-size:32px; color:#FF4500"></i>
